# cognis_UAM

./: pyproject.toml
notebook/: GameTheory_Example-Backup-0225.ipynb  GameTheory_Example.ipynb  GameTheory_Example_Backup.ipynb  GameTheory_Example_Multiple_Cam.ipynb  GameTheory_Example_Multiple_Cam_TrenchRun.ipynb  GameTheory_Example_Obscurring.ipynb  R2T2.ipynb  RRT.ipynb  RRT_Discrete.ipynb  animation_test.ipynb  matplotlib-animation-notebook.ipynb  test.ipynb
notebook/.ipynb_checkpoints/: 1D_RRT_Test-checkpoint.ipynb  GameTheory_Example-checkpoint.ipynb  GameTheory_Example_Multiple_Cam_TrenchRun-checkpoint.ipynb  GameTheory_Example_Obscurring-checkpoint.ipynb  R2T2-checkpoint.ipynb  R2T2_3D_Test-checkpoint.ipynb  RRT-checkpoint.ipynb  RRT_Discrete-checkpoint.ipynb  RRT_LIE_bswarm-checkpoint.ipynb  animation_test-checkpoint.ipynb  matplotlib-animation-notebook-checkpoint.ipynb  test-checkpoint.ipynb
notebook/BellmanEq/: Bellman Equation.ipynb  GameTheory_Example.ipynb
notebook/RRT/: 1D_RRT_Test.ipynb  RRT.ipynb  RRT_Discrete.ipynb  rrt.py
script/: 3D_Test.py  Camera.py  Camera_3D.py  Dynamic.py  Dynamic_3D.py  Dynamic_Map_Generator.py  LP.ipynb  Pixel_RGB_Extract.py  R2T2.py  R2T2_3D.py  R2T2_Goppert_Lie_Class_Result.py  R2T2_Result.json  R2T2_Vr.1_Static_Only.py  R2T2_Vr.2_Dynamic_Collision.py  R2T2_Vr.3_Dynamic_Collision_with_tend.py  R2T2_Vr.4_Dynamic_Collision_WaitGoTest.py  R2T2_Vr.5_Comparison_with_RRT.py  R2T2_Vr.6_Clean_Code.py  RRT_Sanity_Check.ipynb  RRT_in_Vr.2_Setup.py  SE2.py  SO2.py  SO3.py  base.py  comparison.py  discrete_RRT.py
(+79 files in other folders)
