[tool.poetry]
name = "cognis-uam"
version = "0.1.0"
description = ""
authors = ["jeffersonkim97 <jeffersonkim97@gmail.com>"]
readme = "README.md"
packages = [{include = "cognis_uam"}]

[tool.poetry.dependencies]
python = "^3.10"
geometry = "^0.0.23"
shapely = "^2.0.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
